fix: Fixed the dark mode issue; Improved code styling according to .editorconfig

--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -8,14 +8,14 @@
 @import "page-transition";
 
 .card-container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  font-family: "Open Sans", sans-serif;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    font-family: "Open Sans", sans-serif;
 }
-.project-header{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.project-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 @media only screen and (max-width: 1500px) {
     .card-container {
@@ -43,61 +43,61 @@
 }
 
 body {
-  background-color: #f5f5f9;
-  margin-bottom: 50px;
+    background-color: #f5f5f9;
+    margin-bottom: 50px;
 }
 
 h2 {
-  margin-bottom: 20px;
-  margin-top: 20px;
-  font-weight: 700;
-  text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    font-weight: 700;
+    text-align: center;
 }
 
 .card {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 20px 30px;
-  background-color: white;
-  border-radius: 0.375rem;
-  padding: 1.5em;
-  font-size: 1.2em;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 20px 30px;
+    background-color: white;
+    border-radius: 0.375rem;
+    padding: 1.5em;
+    font-size: 1.2em;
 }
 .project-card {
-  border: 0;
-  padding: 0;
-  display: border-box;
-  overflow: clip;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  aspect-ratio: 1;
-  position: relative;
-  .gradient {
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(0deg, #fff, rgba(0, 0, 0, 0));
-    .info {
-      width: 100%;
-      padding: 0.7em;
-      position: absolute;
-      bottom: 0px;
+    border: 0;
+    padding: 0;
+    display: border-box;
+    overflow: clip;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    aspect-ratio: 1;
+    position: relative;
+    .gradient {
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(0deg, #fff, rgba(0, 0, 0, 0));
+        .info {
+            width: 100%;
+            padding: 0.7em;
+            position: absolute;
+            bottom: 0px;
+            background: transparent;
+        }
     }
-  }
-  .gradient:hover {
-    background: none;
-    .info {
-      background-color: #fff;
+    .gradient:hover {
+        background: transparent;
+        .info {
+            background: #fff;
+        }
     }
-  }
 }
 
-//project 
-
+//project
 
 a {
-  color: black;
+    color: black;
 }
 
 .color-inherit {
@@ -196,12 +196,12 @@ a {
 }
 
 .icon {
-  width: 70px;
-  height: 70px;
-  margin-right: 20px;
-  padding: 10px;
+    width: 70px;
+    height: 70px;
+    margin-right: 20px;
+    padding: 10px;
 
-  img {
-    width: 100%;
-  }
+    img {
+        width: 100%;
+    }
 }
